--- a/DGG/index.html
+++ b/DGG/index.html
@@ -15,7 +15,7 @@
         <a href="Random Games/Controller Clicker.html" target="_blank" rel="noopener noreferrer"><button>Stock Image Controller Clicker</button></a>
         <a href="Random Games/Super Mario Clone.html" target="_blank" rel="noopener noreferrer"><button>Mario Clone</button></a>
         <a href="Random Games/The Game.html" target="_blank" rel="noopener noreferrer"><button>Game</button></a>
-        <a href="https://boxyplayz.github.io/"><button>Main Site</button></a>
+        <a href="../.."><button>Main Site</button></a>
     </div>
 
 
