--- a/Unblocked-Scratch-Games/index.html
+++ b/Unblocked-Scratch-Games/index.html
@@ -9,7 +9,7 @@
     <h1>Unblocked Scratch Games For All!!!</h1>
     <div class="games">
 
-        <a href="https://boxyplayz.github.io/"><button>Take me to the Main Page</button></a>
+        <a href="../.."><button>Take me to the Main Page</button></a>
         <br>
         <br>
         <br>
