--- a/DGG/catsarchive/index.html
+++ b/DGG/catsarchive/index.html
@@ -6,7 +6,7 @@
     <title>Cats Archive</title>
 </head>
 <body>
-    <a href="../index.html"><button>Back</button></a><br>
+    <a href=".."><button>Back</button></a><br>
     <a href="Cats 1.html"><button>Cats v1</button></a><br>
     <a href="Cats 2.html"><button>Cats v2</button></a><br>
     <a href="Cats 3.html"><button>Cats v3</button></a>
