--- a/DGG/marioarchive/index.html
+++ b/DGG/marioarchive/index.html
@@ -6,7 +6,7 @@
     <title>Cats Archive</title>
 </head>
 <body>
-    <a href="../index.html"><button>Back</button></a><br>
+    <a href=".."><button>Back</button></a><br>
     <a href="(Not Mobile) Mario Bros.html"><button>[NOT MOBILE] Mario Bros</button></a><br>
     <a href="Mobile Mario Bros.html"><button>Mobile Mario Bros</button></a><br>
     <a href="Mobile Mario Bros 1.1.html"><button>Mobile Mario Bros 1.1</button></a><br>
